# stm32l475-cxx

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: check_all.sh  check_code_format.sh  check_headers.sh  check_include_guards.sh  do_code_format.sh
board/: CMakeLists.txt
board/include/: board_led.h
board/src/: board_led.cpp
bsp/: bsp.cmake
bsp/cmsis-svd/: cmsis-svd.cmake
bsp/stm32/: arm_gcc.cmake  bsp_stm32.cmake
bsp/stm32/include/: bsp.h  heap.h  swo.h
bsp/stm32/src/: bsp.c  heap.c  swo.c  sysmem.c
bsp/stm32/stm32l4/: bsp_stm32l4.cmake
bsp/stm32/stm32l4/STM32CubeL4/: CMakeLists.txt  STM32CubeL4.patch
bsp/stm32/stm32l4/include/: stm32l4xx_hal_conf.h  stm32l4xx_it.h
bsp/stm32/stm32l4/src/: stm32l4xx_hal_msp.c  stm32l4xx_hal_timebase_tim.c  stm32l4xx_it.c  system.c
bsp/stm32/stm32l4/stm32l475/: bsp_stm32l475.cmake
bsp/stm32/stm32l4/stm32l475/src/: STM32L475_FLASH.ld
bsp/stm32/stm32l4/stm32l475/src/startup/: startup_stm32l475xx.s
freertos/: CMakeLists.txt
freertos/config/: FreeRTOSConfig.h
libraries/: CMakeLists.txt
libraries/CMSIS_5/: CMakeLists.txt
main/: CMakeLists.txt
main/include/: main.h
main/src/: main.cpp
modules/: CMakeLists.txt
modules/logging/: CMakeLists.txt
modules/logging/include/: logging.h
modules/logging/src/: logging.cpp
modules/messages/: CMakeLists.txt
modules/messages/include/: messages.h
modules/messages/src/: messages.cpp
